MAJOR FINAL CHANGES

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -3,10 +3,7 @@ import { SITE } from 'astrowind:config';
 ---
 
 <div class="flex items-center">
-  <span class="bg-primary text-primary-foreground font-bold text-xl rounded-md w-8 h-8 flex items-center justify-center mr-2">
-    K
-  </span>
   <span class="text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white">
-    KOHO REFERRAL CODES
+    KOHO Referral Codes
   </span>
 </div>
