--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -45,7 +45,7 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
 <header
   class:list={[
     { sticky: isSticky, relative: !isSticky, dark: isDark },
-    'top-0 z-40 flex-none mx-auto w-full border-b border-gray-50/0',
+    'top-0 z-40 flex-none mx-auto w-full border-b border-gray-200 dark:border-gray-800 bg-white dark:bg-slate-900 shadow-sm',
   ]}
   {...isSticky ? { 'data-aw-sticky-header': true } : {}}
   {...id ? { id } : {}}
