--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -85,7 +85,7 @@ const categorySlug = post.category?.slug ? getPermalink(post.category.slug, 'cat
         {post.author && (
           <>
             <span class="mx-3 text-gray-400">|</span>
-            <!-- Author -->
+            {/* Author */}
             <div class="flex items-center">
               <Icon name="tabler:user" class="w-4 h-4 mr-1.5 text-gray-500 dark:text-gray-400" />
               <span>{post.author}</span>
@@ -96,7 +96,7 @@ const categorySlug = post.category?.slug ? getPermalink(post.category.slug, 'cat
         {post.category && (
           <>
             <span class="mx-3 text-gray-400">|</span>
-            <!-- Category -->
+            {/* Category */}
             <div class="flex items-center">
               <Icon name="tabler:bookmark" class="w-4 h-4 mr-1.5 text-gray-500 dark:text-gray-400" />
               <a href={categorySlug} class="hover:text-primary dark:hover:text-blue-400 transition-colors">
@@ -109,7 +109,7 @@ const categorySlug = post.category?.slug ? getPermalink(post.category.slug, 'cat
         {post.readingTime && (
           <>
             <span class="mx-3 text-gray-400">|</span>
-            <!-- Reading Time -->
+            {/* Reading Time */}
             <div class="flex items-center">
               <Icon name="tabler:book" class="w-4 h-4 mr-1.5 text-gray-500 dark:text-gray-400" />
               <span>{post.readingTime} min read</span>
