--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -6,6 +6,7 @@ import type { Hero as Props } from '~/types';
 
 const {
   title = await Astro.slots.render('title'),
+  titleAs = 'h1',
   subtitle = await Astro.slots.render('subtitle'),
   tagline,
 
@@ -38,7 +39,8 @@ const {
         }
         {
           title && (
-            <h1
+            <Fragment
+              as={titleAs}
               class="text-5xl md:text-6xl font-bold leading-tighter tracking-tighter mb-4 font-heading dark:text-gray-200 intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
               set:html={title}
             />
