--- a/src/components/common/ProductSchema.astro
+++ b/src/components/common/ProductSchema.astro
@@ -27,4 +27,4 @@ const productSchema = {
 };
 ---
 
-<script type="application/ld+json" set:html={JSON.stringify(productSchema)} />
+<script is:inline type="application/ld+json" set:html={JSON.stringify(productSchema)} />
